--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -12,11 +12,12 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px
             padding: 10px;
             margin: auto;
             border-width: 1px;
@@ -29,6 +30,12 @@
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore iusto incidunt deleniti possimus voluptate libero itaque nemo ut hic corporis reiciendis voluptates necessitatibus qui, veritatis illum deserunt ducimus maiores aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nam nihil quibusdam, eaque sed, est sapiente porro, saepe ipsum reprehenderit aut blanditiis. Debitis, iste aspernatur dignissimos error veritatis aperiam nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, nemo eum iusto aperiam odit porro fugit eligendi fugiat culpa perferendis eius! Dolores, quas ex! Accusamus expedita unde non nostrum iste!</p> 
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore iusto incidunt deleniti possimus voluptate libero itaque nemo ut hic corporis reiciendis voluptates necessitatibus qui, veritatis illum deserunt ducimus maiores aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nam nihil quibusdam, eaque sed, est sapiente porro, saepe ipsum reprehenderit aut blanditiis. Debitis, iste aspernatur dignissimos error veritatis aperiam nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, nemo eum iusto aperiam odit porro fugit eligendi fugiat culpa perferendis eius! Dolores, quas ex! Accusamus expedita unde non nostrum iste!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore iusto incidunt deleniti possimus voluptate libero itaque nemo ut hic corporis reiciendis voluptates necessitatibus qui, veritatis illum deserunt ducimus maiores aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nam nihil quibusdam, eaque sed, est sapiente porro, saepe ipsum reprehenderit aut blanditiis. Debitis, iste aspernatur dignissimos error veritatis aperiam nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, nemo eum iusto aperiam odit porro fugit eligendi fugiat culpa perferendis eius! Dolores, quas ex! Accusamus expedita unde non nostrum iste!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore iusto incidunt deleniti possimus voluptate libero itaque nemo ut hic corporis reiciendis voluptates necessitatibus qui, veritatis illum deserunt ducimus maiores aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nam nihil quibusdam, eaque sed, est sapiente porro, saepe ipsum reprehenderit aut blanditiis. Debitis, iste aspernatur dignissimos error veritatis aperiam nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, nemo eum iusto aperiam odit porro fugit eligendi fugiat culpa perferendis eius! Dolores, quas ex! Accusamus expedita unde non nostrum iste!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore iusto incidunt deleniti possimus voluptate libero itaque nemo ut hic corporis reiciendis voluptates necessitatibus qui, veritatis illum deserunt ducimus maiores aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nam nihil quibusdam, eaque sed, est sapiente porro, saepe ipsum reprehenderit aut blanditiis. Debitis, iste aspernatur dignissimos error veritatis aperiam nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, nemo eum iusto aperiam odit porro fugit eligendi fugiat culpa perferendis eius! Dolores, quas ex! Accusamus expedita unde non nostrum iste!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore iusto incidunt deleniti possimus voluptate libero itaque nemo ut hic corporis reiciendis voluptates necessitatibus qui, veritatis illum deserunt ducimus maiores aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nam nihil quibusdam, eaque sed, est sapiente porro, saepe ipsum reprehenderit aut blanditiis. Debitis, iste aspernatur dignissimos error veritatis aperiam nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, nemo eum iusto aperiam odit porro fugit eligendi fugiat culpa perferendis eius! Dolores, quas ex! Accusamus expedita unde non nostrum iste!</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore iusto incidunt deleniti possimus voluptate libero itaque nemo ut hic corporis reiciendis voluptates necessitatibus qui, veritatis illum deserunt ducimus maiores aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nam nihil quibusdam, eaque sed, est sapiente porro, saepe ipsum reprehenderit aut blanditiis. Debitis, iste aspernatur dignissimos error veritatis aperiam nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, nemo eum iusto aperiam odit porro fugit eligendi fugiat culpa perferendis eius! Dolores, quas ex! Accusamus expedita unde non nostrum iste!</p>
     </main>
 </body>
