--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -17,14 +17,16 @@
 
         main {
             background-color: white;
-            max-width: 400px
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border-width: 1px;
             border-style: solid;
             border-color: blue;
-            border-radius: 15px
+            border-radius: 15px;
         }
+
+        
     </style>
 </head>
 <body>
