--- a/exercicios/d012/index.html
+++ b/exercicios/d012/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section>
-        <p>
+        <p class="normal">
             Estou ficando cansado <br>
             Da tal tecnologia <br>
             Só se fala por e-mail <br>
@@ -25,7 +25,7 @@
     </section>
 
     <section>
-        <p>
+        <p class="imagem">
             Não é mais como era antes <br>
             É tudo abreviado <br>
             "Você" só tem duas letras <br>
@@ -37,7 +37,7 @@
     </section>
 
     <section>
-        <p>
+        <p class="normal">
             Arroba agora não pesa <br>
             É parte de um endereço <br>
             Ponto final nem se usa <br>
@@ -59,7 +59,7 @@
     </section>
 
     <section>
-        <p>
+        <p class="imagem">
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
@@ -71,7 +71,7 @@
     </section>
 
     <section>
-        <p>
+        <p class="normal">
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
             Mas quando vou prosear <br>
