--- a/exercicios/d012/index.html
+++ b/exercicios/d012/index.html
@@ -12,8 +12,8 @@
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
 
-    <section>
-        <p class="normal">
+    <section class="normal">
+        <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
             Só se fala por e-mail <br>
@@ -24,8 +24,8 @@
         </p>
     </section>
 
-    <section>
-        <p class="imagem">
+    <section class="imagem">
+        <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
             "Você" só tem duas letras <br>
@@ -36,8 +36,8 @@
         </p>
     </section>
 
-    <section>
-        <p class="normal">
+    <section class="normal">
+        <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
             Ponto final nem se usa <br>
@@ -58,8 +58,8 @@
         </p>
     </section>
 
-    <section>
-        <p class="imagem">
+    <section class="imagem">
+        <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
@@ -70,8 +70,8 @@
         </p>
     </section>
 
-    <section>
-        <p class="normal">
+    <section class="normal">
+        <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
             Mas quando vou prosear <br>
